Fixed issue with list element in archive getting cut off on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -89,4 +89,5 @@ article {
 
 ul {
   list-style: disc;
+  padding-left: 4rem;
 }
